# jarvis

./: Cargo.toml  README.md  example.env
src/: main.rs
src/commands/: help.rs  mod.rs  ping.rs  run.rs  services.rs
src/config/: mod.rs
src/handlers/: message.rs  mod.rs  ready.rs
src/utils/: message.rs
