[package]
name = "jarvis"
version = "0.2.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
